--- a/src/app/shop/components/shop-item-form/shop-item-form.component.css
+++ b/src/app/shop/components/shop-item-form/shop-item-form.component.css
@@ -1,7 +1,7 @@
 input.ng-valid[required] {
-  border-left: 5px solid #42A948; /* green */
+  border-left: 5px solid #ffffff; /* green */
 }
 
 input.ng-invalid {
-  border-left: 5px solid #a94442; /* red */
+  border-left: 5px solid #ffffff; /* red */
 }
