--- a/src/app/shop/components/shop-item-detail/shop-item-detail.component.html
+++ b/src/app/shop/components/shop-item-detail/shop-item-detail.component.html
@@ -1,82 +1,120 @@
-<div class='panel-body'>
-    <div class="col-md-11" *ngIf='shopItem$ | async as shopItem'>
-        <ol class="breadcrumb">
-            <li><a class="btn btn-default btn-link" role="button" (click)='goBack()'>Home</a></li>
-            <li class="active">Detail</li>
-            <li class="active" *ngIf='shopItem'>{{ shopItem.code }}</li>
-        </ol>
-        <div class="thumbnail" *ngIf='shopItem'>
-            <div class="row">
-                <div class="col-md-10">
-                    <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+<div class="flex-root-container"  *ngIf='shopItem$ | async as shopItem'>
+        <div class="flex-item info-img">
+            <img src="http://placehold.it/800x300" alt="">
+            <div class="flex-item divider"></div>
+            <div class="flex-container">
+                <div class="flex-item title-desc">
+                    <h4>{{shopItem.name}}</h4>
                 </div>
-                <div class="col-md-2">
-                    <h3>
-                        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                    </h3>
-                    <br/>
-                    <h5>Code: <small>{{ shopItem.code }}</small></h5>
-                    <h5>Quantity: <small>{{ shopItem.quantityInStock }}</small></h5>
-                    <h5>Released: <small>{{ shopItem.releaseDate }}</small></h5>
-                    <h5>Price: <small>${{ shopItem.unitPrice }}</small></h5>
-                    <br/>
-                    <nav aria-label="...">
-                        <ul class="pager">
-                            <li class="previous"><a class="btn btn-default btn-sm" role="button" (click)='goBack()'><span aria-hidden="true">&larr;</span> Back</a></li>
-                        </ul>
-                     </nav>
+                <div class="flex-item info-summary">
+                    <h4>${{shopItem.unitPrice}}</h4>
                 </div>
             </div>
-            <div class="caption-full">
-                <div class="col-md-12">
-                    <h4>Product: <small>{{ shopItem.name }}</small></h4>
-                    <p>{{ shopItem.description }}</p>
-                    <p class="pull-right">{{ shopItem.reviewsCount }} reviews</p>
-                </div>
-            </div>
-            <div class="ratings">
-                Rating: <p-rating [(ngModel)]="shopItem.rating" [cancel]="false" readonly="true"></p-rating>
-            </div>
+            <p >{{shopItem.description}}</p>
         </div>
-        <div class="well">
+        <div class="flex-item info-summary">
+            <mat-list>
+                <h4>
+                    <mat-chip>
+                        <mat-icon>info</mat-icon>
+                    </mat-chip>
+                    Product's Highlight
+                </h4>           
+                <mat-divider></mat-divider>
+                <mat-list-item>
+                    <h4 mat-line>Code</h4>
+                    <p mat-line>{{ shopItem.code }}</p>
+                </mat-list-item>
+                <mat-list-item>
+                    <h4 mat-line>Quantity</h4>
+                    <p mat-line>{{ shopItem.quantityInStock }}</p>
+                </mat-list-item>
+                <mat-list-item>
+                    <h4 mat-line>Released</h4>
+                    <p mat-line>{{ shopItem.releaseDate }}</p>
+                </mat-list-item>
+                <mat-list-item>
+                    <h4 mat-line>
+                        <p-rating [(ngModel)]="shopItem.rating" [cancel]="false" readonly="true"></p-rating>
+                    </h4>
+                </mat-list-item>
+                <mat-list-item>
+                    <h4 mat-line>
+                        <mat-chip>{{shopItem.reviewsCount}} reviews</mat-chip>
+                    </h4>
+                </mat-list-item>
+            </mat-list>
+        </div>
+        <div class="flex-item divider"></div>
+        <div class="flex-item divider">
             <h4>
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Customer Reviews
+                <mat-chip>
+                    <mat-icon>people</mat-icon>
+                </mat-chip>
+                Customers Reviews
             </h4>
-            <hr>
-            <div class="row" *ngFor='let shopItemReview of shopItem?.reviews'>
-                <div class="col-md-12">
-                    <br/>
+            <mat-divider></mat-divider>
+            <div class="flex-item divider"></div>
+    
+            <div style="display: flex" *ngFor='let shopItemReview of shopItem?.reviews'>
+                <div style="flex: 1">
+                    <mat-icon style="font-size: 50px">perm_identity</mat-icon>
                     <p-rating [(ngModel)]="shopItemReview.rating" [cancel]="false" readonly="true"></p-rating>
-                    <span class="pull-right">10 days ago</span>
-                    <p>{{ shopItemReview.remarks }}</p> - by {{ shopItemReview.userId }}
+                    <p>
+                        10 days ago
+                    </p>
+                    - by {{ shopItemReview.userId }}
+                    <div class="flex-item divider"></div>
+                    <div class="flex-item divider"></div>
+                </div>
+                <div style="flex: 4">
+                    <p>{{ shopItemReview.remarks }}</p>
                 </div>
             </div>
-            <br/>
+            <div class="flex-item divider"></div>
+            <h4>
+                <mat-chip>
+                    <mat-icon>rate_review</mat-icon>
+                </mat-chip>
+                Compose
+            </h4>
+            <mat-divider></mat-divider>
+            <div class="flex-item divider"></div>
             <form (ngSubmit)="onSubmit(shopItem._id, remarks.value)">
-                <div class="row">
-                    <div class="col-xs-12 col-md-8">
-                        <h4>
-                            <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> Compose
-                        </h4>
+            <div style="display: flex">
+                    <div style="flex: 1"></div>
+                    <div style="flex: 4">
+                        <mat-form-field style="width: 100%">
+                            <textarea
+                                matInput
+                                #remarks
+                                placeholder="Share with us your thoughts & experience"
+                                matTextareaAutosize
+                                matAutosizeMinRows="3"
+                                matAutosizeMaxRows="5"
+                                [(ngModel)]="reviewText"
+                                [ngModelOptions]="{standalone: true}"
+                                [disabled]='!auth.isLoggedIn()'>
+                            </textarea>
+                        </mat-form-field>
                     </div>
-                </div>              
-                <div class="row">
-                    <div class="col-xs-12 col-md-8">
-                        <p-rating name="rating" [(ngModel)]="starRating"></p-rating>
-                    </div>
+                    <div style="flex: 1"></div>
                 </div>
-                <div class="row">
-                    <br/>
-                  <div class="col-xs-12 col-md-8">
-                    <div class="form-group">
-                        <textarea class="form-control" id="remarks" #remarks placeholder="Share with us your thoughts & experiences" [(ngModel)]="reviewText" [ngModelOptions]="{standalone: true}" [disabled]='!auth.isLoggedIn()'></textarea>
+                <div style="display: flex">
+                    <div style="flex: 1"></div>
+                    <div style="flex: 4">
+                        <div style="display: flex">
+                            <div style="flex: 6">
+                                <p-rating name="rating" [(ngModel)]="starRating"></p-rating>
+                            </div>
+                            <div style="flex: 1">
+                                <button type="submit" class="btn btn-success" [disabled]='!auth.isLoggedIn()'>Submit Review</button>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                    <div class="col-md-2">
-                        <button type="submit" class="btn btn-success" [disabled]='!auth.isLoggedIn()'>Submit Review</button>
-                    </div>
+                    <div style="flex: 1"></div>
                 </div>
-              </form>
+            </form>
         </div>
     </div>
-</div>
+    
