--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,4 @@
 @import '../node_modules/primeng/resources/primeng.min.css';
 @import '../node_modules/primeng/resources/themes/omega/theme.css';
 @import '../src/assets/css/font-awesome.min.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
