--- a/src/app/shop/components/shop-item-list/shop-item-list.component.html
+++ b/src/app/shop/components/shop-item-list/shop-item-list.component.html
@@ -1,4 +1,4 @@
-<div layout="row" flex layout-align="center center">
+<div fxLayout="row" fxLayoutAlign="center center">
     <a mat-icon-button disabled>
         <mat-icon>search</mat-icon>
     </a>
